--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,12 @@
     <string name="instructions">Instructions</string>
     <string name="recipe_list_fragment_title">Cooking Recipes</string>
     <string name="recipe_detail_list_fragment_title">Details</string>
+    <string name="search_recipes">Search Recipes</string>
+    <string name="no_results">Search Recipes</string>
+    <string name="ic_search_off">Search Recipes</string>
+    <string name="search_off_contentDsc">Search Off</string>
+    <string name="reset_all">Reset</string>
+    <string name="apply">Apply</string>
+    <string name="filter_by_tag">Filter by Tag</string>
+    <string name="filter">Filter</string>
 </resources>
