--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,11 +1,11 @@
 <resources>
-    <string name="app_name">Cooking Recipe</string>
+    <string name="app_name">MunchZeit</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="recipe_image_contentDsc">Image of the recipe</string>
     <string name="ingredients">Ingredients</string>
     <string name="instructions">Instructions</string>
-    <string name="recipe_list_fragment_title">Cooking Recipes</string>
+    <string name="recipe_list_fragment_title">Recipes</string>
     <string name="recipe_detail_list_fragment_title">Details</string>
     <string name="search_recipes">Search Recipes</string>
     <string name="no_results">Search Recipes</string>
